# electronicslab-website

./: .gitignore  Caddyfile  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml
backend/aulas/: admin.py  apps.py  forms.py  models.py  notificar_telegram.py  tasks.py  urls.py  views.py
backend/aulas/api/: serializers.py  urls.py  views.py
backend/authentication/api/: serializers.py  urls.py  views.py
backend/controle/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/controle/api/: serializers.py  urls.py  views.py
backend/controle/models/: __init__.py  acessos.py  componentes.py  compras.py  emprestimos.py  equipamentos.py  funcionarios.py
backend/emprestimos/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/nupedee/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
backend/nupedee/pages/: index.html
backend/root/: admin.py  models.py  tasks.py  urls.py  views.py
backend/root/api/: serializers.py  urls.py  views.py
backend/root/templates/: base.xhtml
backend/root/templates/registration/: login.xhtml
backend/root/templates/root/: login.xhtml
frontend/: .eslintrc.cjs  Dockerfile  README.md  bun.lockb  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  quasar.config.ts  tsconfig.json
frontend/public/resistores/: app.js  calculador.js  index.html  style.css
frontend/src/: App.vue  env.d.ts  main.js  main.ts
frontend/src/boot/: axios.ts  i18n.ts
frontend/src/components/: ComponentTable.vue  EssentialLink.vue  MatriculaButton.vue  NavDash.vue  Navbar.vue  QuadranteAulas.vue  Sidebar.vue  TelaoAulas.vue
frontend/src/css/: app.scss
frontend/src/layouts/: AdminLayout.vue  LoginLayout.vue  MainLayout.vue  TelaoLayout.vue
frontend/src/pages/: AccessPage.vue  CalendarPage.vue  ComponentPage.vue  ComponentPublicPage.vue  EquipmentPage.vue  EquipmentPublicPage.vue  IndexPage.vue  LoanPage.vue  LoginPage.vue  OccurrencePage.vue  PolarePage.vue  PurchasePage.vue  ResistoresPage.vue  TelaoHall.vue  TelaoSecretaria.vue
frontend/src/router/: index.js  index.ts  routes.ts
frontend/src/stores/: auth.ts  index.ts
frontend/src/views/: AccessView.vue  CalendarView.vue  DashboardView.vue  EquipmentView.vue  LoanView.vue  LoginView.vue  NewClassView.vue  PeopleView.vue  PropertyView.vue  PurchaseView.vue  ScheduleView.vue  StatisticsView.vue
