[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nupedee"
version = "0.1.0"
description = "Site novo do NUPEDEE"
authors = [
    { name = "Vinicius Monego", email = "monego@posteo.net" }
]
license = "AGPLv3+"
dependencies = [
    # Task queues
    "redis",

    # Django base
    "django>=4,<5",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=3.13.0",
    "django-dbbackup",
    "django-environ",
    "django-filter",
    "django-q2",
    "psycopg>=3.1.8",
    "whitenoise",

    # Deployment
    "granian>=1,<2",
    "httpx",

    # Extra functionality
    "ipython>=8.18.1",
    "Pillow>=9.4.0",
    "python-barcode",
    "reportlab>=4,<5",

    # Database import
    "pandas>=2.1",
]

[tool.hatch.version]
path = "{{ project_name }}/__version__.py"

# Default environment
[tool.hatch.envs.default]
dependencies = [
    "django-types",
    "ipdb",
    "model-bakery",
    "pytest",
    "pytest-django",
    "pytest-mock",
]

[tool.hatch.envs.pypy]
type = "virtual"
python = "pypy3.10"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "C90"]
exclude = ["__pycache__", ".git", "old", "build", "dist"]
