[tool.poetry]
name = "nupedee-backend"
version = "0.1.0"
description = "Backend do site do NUPEDEE"
authors = ["Vinicius Monego <vinicius.monego@ufsm.br>"]
license = "AGPLv3+"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# Task queues
redis = "*"

# Django base
django = ">=5,<6"
djangorestframework = ">=3.14.0"
django-cors-headers = ">=3.13.0"
django-dbbackup = "*"
django-environ = "*"
django-filter = "*"
django-q2 = "*"
psycopg = ">=3.1.8"
whitenoise = "*"

# Deployment
granian = ">=2,<3"
httpx = "*"

# Extra functionality
ipython = ">=8.18.1"
Pillow = ">=9.4.0"
python-barcode = "*"
reportlab = ">=4,<5"

# Database import
pandas = ">=2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
